# play-microservices

./: .env  LICENSE  README.md  docker-compose.yml
api-gateway/: .env  docker-compose.yml  readme.md
api-gateway/api-gateway-service/: Dockerfile  build_grpc.sh  go.mod  go.sum
api-gateway/gripmock/: Dockerfile  report.proto  user.proto
api-gateway/postman/: Dockerfile
auth/: .env  docker-compose.yml
auth-service/: .gitignore  Build.rs  Cargo.toml  Dockerfile  README.md  db_url_make.sh
auth-service/migrations/2023-06-20-024349_create_users/: down.sql  up.sql
auth-service/proto/: user.proto
auth-service/src/: convert.rs  main.rs  models.rs  schema.rs  service.rs  token.rs
auth-service/src/interceptors/: authenticate.rs  authenticate_intercepor.rs
auth-service/src/services/: user.rs  user_profile.rs
auth/auth-cache-service/: .env  Dockerfile  redis.conf  users.acl
auth/auth-db-service/: url.txt
auth/auth-grpcui-service/: Dockerfile
auth/auth-service/: .env  Build.rs  Cargo.toml  Dockerfile  Dockerfile.test  README.md  access.public  db_url_make.sh
auth/auth-service/keys/: access_token.private.pem  refresh_token.private.pem  refresh_token.public.pem
auth/auth-service/migrations/2023-06-20-024349_create_users/: down.sql  up.sql
auth/auth-service/proto/: user.proto
auth/auth-service/src/: config.rs  interceptors.rs  main.rs  schema.rs  services.rs  token.rs  utils.rs
auth/auth-service/src/interceptors/: auth.rs
auth/auth-service/src/models/: user.rs
auth/auth-service/src/models/user/: db.rs  grpc.rs
auth/auth-service/src/models/user/db/: diesel_postgres.rs  model.rs  redis.rs  tests.rs  validation.rs
auth/auth-service/src/models/user/db/tests/: validation.rs
auth/auth-service/src/models/user/grpc/: user_grpc_service.rs  user_profile_grpc_service.rs
auth/auth-service/src/proto/: proto.rs
auth/auth-service/src/services/: user_profile.rs
auth/auth-service/src/utils/: jwtoken.rs
client-web/: .env  docker-compose.yml  readme.md
email/: .env  docker-compose.yml  readme.md
plan/: docker-compose.yml  readme.md
report/: .env  docker-compose.yml  readme.md
scheduler/: .env  docker-compose.yml
(+178 files in other folders)
