[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["macros", "sync", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["tls"] }
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
