[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["khaled hosseini <khaled.hosseini77@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
false = { version = "0.0.0", optional = true }
futures = "0.3.28"
hyper = "0.14.26"
jsonwebtoken = "8.3.0"
log = "0.4.19"
prost = "0.11.9"
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "sync", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["tls"] }
tonic-reflection = "0.9.2"
tower = "0.4.13"
uuid = { version = "1.3.4", features = ["serde", "v4"] }


[build-dependencies]
tonic-build = "0.9.2"
